# ocaml-datatable

./: .gitignore  LICENSE  README.md  datatable.opam  dune-project
examples/: dune  iris_data.ml
src/: builder.ml  builder.mli  column.mli  datatable.ml  datatable.mli  dune  error.ml  io.ml  io.mli  series.ml  series.mli  series1.ml  series1.mli  table.ml  table.mli
test/: dune  test_builder.ml  test_datatable.ml  test_runner.ml  test_series.ml  test_series1.ml  test_table.ml
